# Desafio_Python_G2

./: .gitignore  EXECUTAR.md  INSIGHTS.md  PREPROCESSING_REPORT.md  README.md  app.py  pyproject.toml
251208/251208-ex05/: index.html  style.css
251215/251215-ex02/: index.html  script.js  style.css
Desafio03_Python/: .gitignore  README.md
src/: analysis_report.py  data_cleaning.py  descriptive_analysis.py  predictive_analysis.py
