[tool.poetry]
name = "desafio03-python"
version = "0.1.0"
description = "Data Analysis Project with Python"
authors = ["Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pandas = ">=3.0.1,<4.0.0"
numpy = ">=2.4.2,<3.0.0"
matplotlib = ">=3.10.8,<4.0.0"
seaborn = ">=0.13.2,<0.14.0"
scikit-learn = ">=1.8.0,<2.0.0"
statsmodels = ">=0.14.0,<1.0.0"
prophet = ">=1.1.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
